update-manager (1:0.93.5) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - install new recommends on the hardy->intrepid upgrade
      (unless overwriten with the RELEASE_UPGRADE_NO_RECOMMENDS
       environment)
  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
    - run ssh in the auto tester with "-t"

 --

update-manager (1:0.93.4) intrepid; urgency=low

  * DistUpgrade/removal_blacklist.cfg:
    - add openssh-blacklist-extra and openssh-extra
  * UpdateManager/UpdateManager.py:
    - do not crash if lsb_release can not be run (LP: #255319)
  * DistUpgrade/DistUpgradeApport.py:
    - do not generate apport reports against a package if
      the error indicates that its a full disk, this is a bug
      in update-manager than (failed to do the full disk checking)
  * DistUpgrade/DistUpgrade.cfg:
    - force obsoletion of cups-pdf on ubuntu-desktop, kubuntu-desktop
      and xubuntu-desktop
  * DistUpgrade/DistUpgradeController.py:
    - increase KERNEL_INITRD_SIZE a bit

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 15 Aug 2008 19:40:46 +0200

update-manager (1:0.93.3) intrepid; urgency=low

  * fix ftbfs on powerpc

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Aug 2008 21:20:59 +0200

update-manager (1:0.93.2) intrepid; urgency=low

  * DistUpgrade/DistUpgradeCache.py:
    - work around problem with packages with no priority
      (LP: #253255)
  * DistUpgrade/DistUpgradeViewGtk.py:
    - detect ctrl-c presses in the terminal and warn the 
      user that it will kill the upgrade (LP: #90866)
  * DistUpgrade/DistUpgrade.cfg:
    - when being run by the sandbox-upgrader, do not 
      reboot automatically after the upgrade finished
  * DistUpgrade/DistUpgradeController.py:
    - when a upgrade is cancelt due to network errors, 
      inform that the downloaded files will be kept 
      (LP: #242111)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 05 Aug 2008 20:37:52 +0200

update-manager (1:0.93.1) intrepid; urgency=low
