@@ -6,6 +6,8 @@ update-manager (1:0.93.5) intrepid; urgency=low
        environment)
   * AutoUpgradeTester/UpgradeTestBackendQemu.py:
     - run ssh in the auto tester with "-t"
+  * UpdateManager/UpdateManager.py:
+    - fix plural forms (thanks to Bruce Cowan, LP: #189921)
 
  --
 
